style.css
html {
    font-size: 87.5%
}

body.mobile {
    --tree-font-size: 87.5%;
}

body.mobile .col-12 {
    padding-right: 0;
}

body.mobile .quick-search {
    border-bottom: 1px solid var(--main-border-color);
}

body .note-detail {
    font-size: 114%;
}

body .ck-content, body .ck-content table th, body .ck-content table td {
    color: rgb(55, 53, 47);
}

body .note-title-widget input.note-title, body .ck-content h2,  body .ck-content h3,  body .ck-content h4,  body .ck-content h5,  body .ck-content h6 {
    font-weight: 700;
}

body .note-title-widget input.note-title {
    font-size: 2.1375em;
}

body .ck-content h2 {
    margin-top: 1.4em;
    font-size: 1.5em;
    line-height: 1.3;
}

 body .ck-content h3 {
    margin-top: 1em;
    font-size: 1.25em;
    line-height: 1.3;
}

 body .ck-content h4, body .ck-content h5, body .ck-content h6 {
    margin-top: 0.75em;
    font-size: 1em;
    line-height: 1.3;
}

body .ck-content p, body .ck-content li {
    margin-bottom: 0.5em;
}

body .ck-content ul, body .ck-content ol {
    margin-bottom: 0rem;
}

body .ck.ck-content ul ul, body .ck.ck-content ol ol {
    margin-top: 0.5em !important;
    padding-left: 1.5em;
}

body .ck-content ul.todo-list {
    margin-bottom: 0.5rem;
}

body .ck-content ul li label {
    margin-bottom: 0rem;
}

body .ck-content hr {
    height: 1px;
    color: rgba(55,53,47, 0.16);
    margin-bottom: 0.5em;
}

body .ck-content u {
    text-decoration: none;
    border-bottom: 0.05em solid;
}

body .ck-content blockquote {
    margin-bottom: 0.5em;
    border-left: 3px solid currentcolor;
    font-style: normal;
    padding-left: 1em;
    padding-right: 1em;;
}

body .ck-content blockquote p {
    padding-top: 0.25em;
    margin-bottom: 0.25em;
}

body .ck-content pre {
    margin-bottom: 0.5em;
    border: 0;
    padding: 1.5em;
    background-color: var(--accented-background-color);
}

body .ck-content .image {
    margin-top: 0;
    margin-bottom: 0.5em;
}

body .ck-content .table {
    font-size: 95%;
    margin-top: 0;
    margin-bottom: 0.5em;
}

body .ck-content p code, body .ck-content li code {
    background-color: var(--accented-background-color);
    padding: 0.2em 0.4em;
    font-size: 105%;
    color: #EB5757 !important;
    border-radius: 3px;
}

body .fancytree-node:not(.fancytree-loading) .fancytree-expander:before {
    color: rgba(55, 53, 47, 0.2);
}

body span.fancytree-node:hover {
    border: 0;
    background-color: rgba(0,0,0,0.1);
    border-radius: 2px;
}

body .tab-row-widget {
    margin-left: -5px;
    margin-bottom: 4px;
    width: 110%;
    background: var(--left-pane-background-color);
}

body .tab-row-widget .note-tab .note-tab-wrapper {
    border-radius: 0;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    margin-right: -5px;
    background-color: var(--active-tab-background-color);
}

body .tab-row-widget .note-tab[active] .note-tab-wrapper {
    background-color: var(--main-background-color);
}

body .ribbon-tab-container, body .ribbon-button-container {
    border-top: 1px solid var(--main-border-color); 
    padding-top: 5px;
}

body .ck.ck-editor__editable_inline {
    padding-right: calc(100% - 700px);
}

body .note-list-widget {
    max-width: 700px;
    margin-left: 14px;
}

body a.external:not(.no-arrow):after, a[href^="http://"]:not(.no-arrow):after, a[href^="https://"]:not(.no-arrow):after {
    display: none;
}

body .ck-content a, body .ck-content a:visited, body .ck-content a:hover {
    color: var(--muted-text-color);
    text-decoration: none;
    border-bottom: 1px solid var(--muted-text-color);
}

body .title-row > * {
    margin: 0;
}

body .ribbon-tab-spacer {
    max-width: 1em;
}

body .ribbon-button-container > * {
    margin-left: 0;
}

body .note-icon-widget button.note-icon {
    padding-top: 9px;
}

body #launcher-pane {
    background-color: var(--active-tab-background-color);
}

